kubernetes/apps/envoy-gateway-system/envoy-gateway-instance/manifests/envoy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.networking.k8s.io/gatewayclass_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: envoy-gateway-system
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.networking.k8s.io/gateway_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.kubernetes.io/target: external.darkfellanetwork.com
    gatus.home-operations.com/endpoint: |
      client:
        dns-resolver: tcp://1.1.1.1:53
      group: external
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: 192.168.91.51
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: external.darkfellanetwork.com
      lbipam.cilium.io/ips: 192.168.91.51
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.darkfellanetwork.com"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.darkfellanetwork.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: darkfellanet-tls
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.networking.k8s.io/gateway_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.kubernetes.io/target: internal.darkfellanetwork.com
    gatus.home-operations.com/endpoint: |-
      group: internal
      guarded: true
      ui:
        hide-hostname: true
        hide-url: true
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: 192.168.91.52
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: internal.darkfellanetwork.com
      lbipam.cilium.io/ips: 192.168.91.52
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.darkfellanetwork.com"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.darkfellanetwork.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: darkfellanet-tls
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.networking.k8s.io/gateway_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: plex
  annotations:
    gatus.home-operations.com/endpoint: |
      client:
        dns-resolver: tcp://k8s-gateway.k8s-gateway.svc.cluster.local:53
      group: external
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: 192.168.91.60
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 192.168.91.60
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: plex.darkfellanetwork.com
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: plex.darkfellanetwork.com
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: darkfellanet-tls
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  compressor:
    - type: Zstd
      zstd: {}
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset-before-request
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  tcpKeepalive:
    idleTime: 60s
    interval: 10s
    probes: 3
  timeout:
    http:
      connectionIdleTimeout: 4s
      requestTimeout: 0s
      streamIdleTimeout: 1h
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.networking.k8s.io/httproute_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  annotations:
    external-dns.kubernetes.io/controller: none
    gatus.home-operations.com/enabled: "false"
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: http
    - name: external
      namespace: envoy-gateway-system
      sectionName: http
    - name: artifactory
      namespace: envoy-gateway-system
      sectionName: http
    - name: plex
      namespace: envoy-gateway-system
      sectionName: http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
