kubernetes/apps/envoy-gateway-system/envoy-gateway-instance/manifests/redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpsredirect
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: http
    - name: external
      namespace: envoy-gateway-system
      sectionName: http
    - name: artifactory
      namespace: envoy-gateway-system
      sectionName: http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
